--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vegas",
   "version": "1.0.0-dev.3",
   "license": "MIT",
+  "simTitleStringKey": "VEGAS/vegas.name",
   "phetLibs": [
     "vegas"
   ],
