automatically add pkg.name to phetLibs, phetsims/chipper#271

--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
   },
   "phet": {
     "requirejsNamespace": "VEGAS",
-    "simTitleStringKey": "VEGAS/vegas.name",
-    "phetLibs": [
-      "vegas"
-    ]
+    "simTitleStringKey": "VEGAS/vegas.name"
   }
 }
