--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "requirejs": "~2.1.8"
   },
   "phet": {
-    "requirejsNamespace": "VEGAS",
-    "simTitleStringKey": "VEGAS/vegas.name"
+    "requirejsNamespace": "VEGAS"
   }
 }
