--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "supportedBrands": [
       "phet",
       "adapted-from-phet"
-    ]
+    ],
+    "supportsSound": true
   },
   "eslintConfig": {
     "extends": "../chipper/eslint/sim_eslintrc.js"
