convert supportsSound to boolean, and nest under "features" in package.json, https://github.com/phetsims/chipper/issues/1031

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
       "phet",
       "adapted-from-phet"
     ],
-    "supportsSound": true
+    "features": {
+      "supportsSound": true
+    }
   },
   "eslintConfig": {
     "extends": "../chipper/eslint/sim_eslintrc.js"
