--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
       "phet",
       "adapted-from-phet"
     ],
-    "features": {
+    "simFeatures": {
       "supportsSound": true
     }
   },
