Add "supportsOutputJS": true, see https://github.com/phetsims/chipper/issues/1095

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     ],
     "simFeatures": {
       "supportsSound": true
-    }
+    },
+    "supportsOutputJS": true
   },
   "eslintConfig": {
     "extends": "../chipper/eslint/sim_eslintrc.js"
