Convert StatusBar to TypeScript, see https://github.com/phetsims/center-and-spread/issues/6

--- a/tsconfig-all.json
+++ b/tsconfig-all.json
@@ -12,6 +12,7 @@
     "js/**/*tests.js",
     "js/**/*Tests.js",
     "js/vegas-main.js",
-    "js/demo/**/*"
+    "js/demo/**/*",
+    "../chipper/phet-types.d.ts"
   ]
 }
