make lint more strict for vegas

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
           "**/*.ts"
         ],
         "rules": {
+          "@typescript-eslint/adjacent-overload-signatures": "error",
+          "@typescript-eslint/ban-ts-comment": "error",
           "@typescript-eslint/explicit-member-accessibility": "error"
         }
       }
