--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "rules": {
           "@typescript-eslint/adjacent-overload-signatures": "error",
           "@typescript-eslint/ban-ts-comment": "error",
-          "@typescript-eslint/explicit-member-accessibility": "error"
+          "@typescript-eslint/explicit-member-accessibility": "error",
+          "@typescript-eslint/no-explicit-any": "error"
         }
       }
     ]
