--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "adapted-from-phet"
     ],
     "simFeatures": {
-      "supportsSound": true
+      "supportsSound": true,
+      "supportsDynamicLocale": true
     },
     "supportsOutputJS": true
   },
