Adding screenNameKeys to package.json (and adding some translated strings to some runnables), see https://github.com/phetsims/chipper/issues/1367

--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
       "supportsSound": true,
       "supportsDynamicLocale": true
     },
-    "supportsOutputJS": true
+    "supportsOutputJS": true,
+    "screenNameKeys": [
+      "VEGAS/screen.components",
+      "VEGAS/screen.finiteChallenges",
+      "VEGAS/screen.infiniteChallenges"
+    ]
   },
   "eslintConfig": {
     "extends": "../chipper/eslint/sim_eslintrc.js",
