Add default-class-match-filename.js, see: https://github.com/phetsims/chipper/issues/1395

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         ],
         "rules": {
           "@typescript-eslint/no-explicit-any": "error",
+          "default-class-match-filename": "off",
           "@typescript-eslint/ban-ts-comment": [
             "error",
             {
