add alt input and sound to demos that don't have it, https://github.com/phetsims/sun/issues/866

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     ],
     "simFeatures": {
       "supportsSound": true,
-      "supportsDynamicLocale": true
+      "supportsDynamicLocale": true,
+      "supportsInteractiveDescription": true
     },
     "supportsOutputJS": true,
     "screenNameKeys": [
