--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         },
         "parserOptions": {
           "project": [
-            "../vegas/tsconfig.json"
+            "../chipper/tsconfig/eslint-all/tsconfig.json"
           ]
         }
       }
