--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -88,8 +88,8 @@ a11y:
   levelSelectionButton:
 
     # The accessible name has two variants - with and without a descriptive name.
-    accessibleName:              'Level { $levelNumber }, { a11y.units.stars.pattern }'
-    accessibleNameWithLevelName: 'Level { $levelNumber }: { $levelName }, { a11y.units.stars.pattern }'
+    accessibleName:              'Level { $levelNumber }, { $scoreDescription }'
+    accessibleNameWithLevelName: 'Level { $levelNumber }: { $levelName }, { $scoreDescription }'
   levelSelectionScreenNode:
     screenSummary:
       useResetDescription: Use reset all to clear the game and start over.
