context response when the level selection screen is shown, see https://github.com/phetsims/vegas/issues/138

--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -91,6 +91,7 @@ a11y:
     accessibleName:              'Level { $levelNumber }, { $scoreDescription }'
     accessibleNameWithLevelName: 'Level { $levelNumber }: { $levelName }, { $scoreDescription }'
   levelSelectionScreenNode:
+    accessibleContextResponseShow: Choose Your Level!
     screenSummary:
       intro:               Welcome to the { $screenName } Screen. Choose a level to start earning stars. Use reset all to clear game and start over.
       introWithOptions:    Welcome to the { $screenName } Screen. Choose a level to start earning stars. Set available game options to your liking. Use reset all to clear game and start over.
