demonstrate the reward screen, see https://github.com/phetsims/vegas/issues/138

--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -84,6 +84,8 @@ a11y:
     accessibleHeadingChallenge: Challenge
     accessibleAnswerSection:    Answer Submission
     accessibleProgressSection:  Level { $levelNumber } Progress
+  rewardScreenNode:
+    accessibleHeading: Level { $levelNumber } Complete
   units:
     stars:
       pattern: |-
