remove TODOs that have been completed and update string, see https://github.com/phetsims/vegas/issues/138

--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -85,7 +85,7 @@ a11y:
     accessibleAnswerSection:    Answer Submission
     accessibleProgressSection:  Level { $levelNumber } Progress
   rewardScreenNode:
-    accessibleHeading: Level { $levelNumber } Complete
+    accessibleHeading: Level { $levelNumber } Summary
   units:
     stars:
       pattern: |-
