--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -56,11 +56,9 @@ a11y:
     accessibleHeadingWithLevelNumber: Level { $levelNumber } Progress
     backButton:
       accessibleName:            Back
-      accessibleHelpText:        Go back to the level selection screen.
-      accessibleContextResponse: You are on the level selection screen.
+      accessibleHelpText:        Go back to choose a new level.
     startOver:
-      accessibleHelpText:        Erase game progress and begin again.
-      accessibleContextResponse: Choose your level!
+      accessibleHelpText:        Erase progress and choose a new level.
   checkButton:
     accessibleName:     Check Answer
     accessibleHelpText: Read challenge details carefully.
@@ -79,7 +77,7 @@ a11y:
       # A display of the time when it is the new best time.
       timeWithNewBest: 'Time: { $time }. Your New Best!'
     continueButton:
-      accessibleHelpText: Return to level selection screen and keep playing.
+      accessibleHelpText: Choose a new level and keep playing.
   gameInfoButton:
     accessibleName:     Game Info
     accessibleHelpText: If needed, read brief details for each level.
