context response for showing the reward dialog, see https://github.com/phetsims/vegas/issues/138

--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -96,6 +96,8 @@ a11y:
     accessibleHeading: Level { $levelNumber } Summary
   rewardDialog:
     accessibleName: Level { $levelNumber } Summary
+    accessibleContextResponseShown: Level { $levelNumber } complete with { $stars }.
+    accessibleContextResponseHidden: Continue playing level { $levelNumber }.
     phetGirl:
       accessibleParagraph: PhET Girl juggles a few of your { $stars }.
     newLevelButton:
