--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -77,6 +77,7 @@ a11y:
       timeWithNewBest: 'Time: { $time }. Your New Best!'
     continueButton:
       accessibleHelpText: Choose a new level and keep playing.
+    accessibleContextResponse: Level { $levelNumber } complete. { $stars }, { $progressMessage }
   gameInfoButton:
     accessibleName:     Game Info
     accessibleHelpText: If needed, read brief details for each level.
