Add Levels string, see https://github.com/phetsims/number-pairs/issues/340 and https://github.com/phetsims/vegas/issues/146

--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -30,6 +30,7 @@ score:                            'Score:'
 done:                             Done
 youCompletedAllLevels:            You completed all levels!
 chooseYourLevel:                  Choose Your Level!
+levels:                           Levels
 
 keyboardHelpDialog.gameShortcuts: Game Shortcuts
 keyboardHelpDialog.checkAnswer:   Check Answer
