--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -141,9 +141,11 @@ a11y:
 
   levelSelectionButton:
 
-    # The accessible name has two variants - with and without a descriptive name.
+    # The accessible name has four variants - with and without a descriptive name and additionally with and without best time.
     accessibleName:              'Level { $levelNumber }, { $scoreDescription }'
     accessibleNameWithLevelName: 'Level { $levelNumber }: { $levelName }, { $scoreDescription }'
+    accessibleNameWithBestTime: 'Level { $levelNumber }, { $scoreDescription }, best time { $time }'
+    accessibleNameWithLevelNameAndBestTime: 'Level { $levelNumber }: { $levelName }, { $scoreDescription }, best time { $time }'
   levelSelectionScreenNode:
     accessibleHeadingChooseLevel:  Choose Your Level
     accessibleHeadingOptions:      Game Options
