Override bestTime when it is 0 and update string, see https://github.com/phetsims/vegas/issues/130

--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -58,6 +58,7 @@ a11y:
   timeDisplayPattern: |-
                       { $hours ->
                         [0] { $minutes ->
+                                [0] { $seconds } seconds
                                 [one] 1 minute and { $seconds } seconds
                                 *[other] { $minutes } minutes and { $seconds } seconds
                                 }
