simplify accessible paragraph for Check Answer button, see https://github.com/phetsims/build-an-atom/issues/465

--- a/vegas-strings_en.yaml
+++ b/vegas-strings_en.yaml
@@ -174,4 +174,4 @@ a11y:
     checkAnswerButton:
 
       # Accessible description of the action in the dialog.
-      accessibleParagraph: Check Answer with { $altOrOption } key plus C key.
+      accessibleParagraph: Check Answer with { $altOrOption } plus C key.
